--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3.1'
 services:
-  web:
+  app:
     build: .
     ports:
-     - "8080:80"
+     - "4567:4567"
+    command: tail -F anything
     volumes:
-     - ./www:/var/www/site/
+     - ./code:/usr/src/app/
     links:
      - db
   db:
